@@ -1,5 +1,9 @@
 2008-05-22  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* Makefile.am: Don't explicitly state where to install documentation.
+
+2008-05-22  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* src/storage-manager.c: Allow the application to close gracefully
 	if an encryption key can't be found.
 
